--- a/index.html
+++ b/index.html
@@ -30,13 +30,42 @@
 
   <div class="main">
 
-    <form action="">
-      <label for="search">Cerca tra i contatti:</label>
-      <input type="text" name="search" placeholder="Search" autocomplete="off">
-      <button class="btn">Cerca</button>
-    </form>
+    <div class="form-cont">
+
+      <form action=""class="form form-search">
+
+        <h3>Cerca tra i contatti:</h3>   
+
+        <input type="text" name="search" placeholder="Search" autocomplete="off">
+        <button class="btn">Cerca</button>
+
+      </form>
+
+      <form action="" class="form form-insert">
+
+        <h3>Aggiungi contatti:</h3> 
+
+          <div class="input-div">
+            <label for="name">Nome e Cognome*</label>
+            <input type="text" id="name" name="name" placeholder="Nome e cognome" required>
+          </div>
+          <div class="input-div">
+            <label for="email">Email*</label>
+            <input type="email" id="email" name="email" placeholder="Email" required>
+          </div>  
+          <div class="input-div">
+            <label for="phone">Telefono*</label>
+            <input type="phone" id="phone" name="phone" placeholder="Telefono" required>
+          </div>
+
+        <button class="btn btn-insert">Inserisci</button>
+
+      </form>
+
+    </div>
 
     <div class="card">
+
       <ul>
         <!-- <li>
           <h3>Rick Sanchez</h3>
@@ -44,6 +73,7 @@
           <p><strong>Email: </strong><a href="mailto:rick@rickandmorty.com"></a>rick@rickandmorty.com</p>
         </li> -->
       </ul>
+
     </div>
 
   </div>  
