--- a/index.html
+++ b/index.html
@@ -30,39 +30,45 @@
 
   <div class="main">
 
-    <div class="form-cont">
+    <div class="form">
 
-      <form action=""class="form form-search">
+      <div class="form-cont">
 
-        <h3>Cerca tra i contatti:</h3>   
+        <h3>Cerca tra i contatti:</h3> 
 
-        <input type="text" name="search" placeholder="Search" autocomplete="off">
-        <button class="btn">Cerca</button>
+        <form action=""class="form-search">        
 
-      </form>
+          <input type="text" name="search" placeholder="Search" autocomplete="off">
+          <button class="btn">Cerca</button>
 
-      <form action="" class="form form-insert">
+        </form>
+      </div>
 
-        <h3>Aggiungi contatti:</h3> 
+      <div class="form-cont">
 
-          <div class="input-div">
-            <label for="name">Nome e Cognome*</label>
-            <input type="text" id="name" name="name" placeholder="Nome e cognome" required>
-          </div>
-          <div class="input-div">
-            <label for="email">Email*</label>
-            <input type="email" id="email" name="email" placeholder="Email" required>
-          </div>  
-          <div class="input-div">
-            <label for="phone">Telefono*</label>
-            <input type="phone" id="phone" name="phone" placeholder="Telefono" required>
-          </div>
+        <h3>Aggiungi contatti:</h3>
 
-        <button class="btn btn-insert">Inserisci</button>
+        <form action="" class="form-insert">         
 
-      </form>
+            <div class="input-div">
+              <label for="name">Nome e Cognome*</label>
+              <input type="text" id="name" name="name" placeholder="Nome e cognome" required>
+            </div>
+            <div class="input-div">
+              <label for="email">Email*</label>
+              <input type="email" id="email" name="email" placeholder="Email" required>
+            </div>  
+            <div class="input-div">
+              <label for="phone">Telefono*</label>
+              <input type="phone" id="phone" name="phone" placeholder="Telefono" required>
+            </div>
 
-    </div>
+          <button class="btn btn-insert">Inserisci</button>
+
+        </form>
+      </div>
+
+  </div>
 
     <div class="card">
 
