--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>  
             <div class="input-div">
               <label for="phone">Telefono*</label>
-              <input type="phone" id="phone" name="phone" placeholder="Telefono" required>
+              <input type="tel" id="phone" name="phone" placeholder="Telefono" required>
             </div>
 
           <button class="btn btn-insert">Inserisci</button>
