--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&family=Poppins:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/common.css">
 
     <title>Widget Contatti</title>
 
@@ -87,7 +87,7 @@
   
 
   <footer>
-    <img src="/img/footer.png" alt="logo" width="30" height="30">
+    <img src="./img/footer.png" alt="logo" width="30" height="30">
     <p>Designed by Chiara Caruso</p>
   </footer>
 
@@ -95,7 +95,7 @@
 
 
 
-<script src="/js/data.js"></script>  
-<script src="/js/index.js"></script> 
+<script src="./js/data.js"></script>  
+<script src="./js/index.js"></script> 
 </body>
 </html>
